--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ pull github:
     - ssh-add <(echo "$SSH")
     - mkdir ~/.ssh
     - touch ~/.ssh/known_hosts
-    - ssh-keyscan -p 2222 -t rsa $REGISTRY_HOST > ~/.ssh/known_hosts
+    - ssh-keyscan -p 2222 -t rsa $GITLAB_HOST > ~/.ssh/known_hosts
     - git config --global user.email '$USER_EMAIL'
     - git config --global user.name '$USER_NAME'
     - git checkout dev
