Remove old build pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,19 +17,31 @@ variables:
   IMAGE_NAME: $REGISTRY_HOST/$CI_PROJECT_PATH
   HARBOR_IMAGE_NAME: $HARBOR_REGISTRY_HOST/$CI_PROJECT_PATH
   MAVEN_CLI_OPTS: -DskipTests --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true
+  GIT_REPO_ORIGIN: $GIT_REPO_ORIGIN
   GIT_STRATEGY: clone
 
 stages:
-  - build
   - github
+  - build
   - docker
-  - deploy
-  - release
-  - docker-hub
 
-    #before_script:
-    #- echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
-    #- git remote set-url origin $GIT_REPO_ORIGIN/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
+pull github:
+  image: maven:3-jdk-8
+  stage: github
+  script:
+  - git remote set-url origin $GIT_REPO_ORIGIN/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
+  - git remote add github git@github.com:apache/incubator-streampipes.git
+  - eval $(ssh-agent -s
+  - ssh-add <(echo "$SSH")
+  - mkdir ~/.ssh
+  - touch ~/.ssh/known_hosts
+  - ssh-keyscan -p 2222 -t rsa $GITLAB_HOST > ~/.ssh/known_hosts
+  - git config --global user.email '$USER_EMAIL'
+  - git config --global user.name '$USER_NAME'
+  - git checkout dev
+  - git pull github dev
+  - git push origin --all
+
 
 build:
   image: maven:3-jdk-8
@@ -81,20 +93,6 @@ build-ui:
     expire_in: 1 hour
   only:
     - dev
-      
-github:
-  image: maven:3-jdk-8
-  stage: github
-  script:
-    - git config --global user.email 'zehnder@fzi.de'
-    - git config --global user.name 'zehnder'
-    - git checkout $CI_COMMIT_REF_NAME
-    - git pull
-    - git remote add github https://$GITHUB_TOKEN:x-oauth-basic@github.com/streampipes/streampipes.git
-    - git push github $CI_COMMIT_REF_NAME
-  only:
-    - dev
-    - master
 
 docker-ui:
   image: docker:17.06.0-ce
@@ -107,11 +105,8 @@ docker-ui:
     - apk update
     - apk add curl
     - apk add unzip
-    #    - 'curl -k -f -L -H "PRIVATE-TOKEN: ${API_KEY}" -o javadoc.zip "https://ipe-wim-gitlab.fzi.de/streampipes/ce/-/jobs/artifacts/dev/download?job=build"'
-    #    - unzip javadoc.zip
-    #    - mkdir javadoc && mv target/site/apidocs/* ./javadoc
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
-    - docker login -u zehnder -p $HARBOR_PASSWORD $HARBOR_REGISTRY_HOST
+    - docker login -u $USER_NAME -p $HARBOR_PASSWORD $HARBOR_REGISTRY_HOST
     - docker build --no-cache --pull -t $HARBOR_IMAGE_NAME/ui:$MVN_VERSION -t $IMAGE_NAME/ui:$MVN_VERSION ./ui
     - docker push $IMAGE_NAME/ui:$MVN_VERSION
     - docker push $HARBOR_IMAGE_NAME/ui:$MVN_VERSION
@@ -119,12 +114,12 @@ docker-ui:
 docker-backend:
    image: docker:17.06.0-ce
    stage: docker
-   dependencies: 
+   dependencies:
      - build
-   script: 
+   script:
      - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
-     - docker login -u zehnder -p $HARBOR_PASSWORD ipe-harbor.fzi.de
+     - docker login -u $USER_NAME -p $HARBOR_PASSWORD $HARBOR_TEGISTRY_HOST
      - docker build --pull -t $IMAGE_NAME/backend:latest -t $IMAGE_NAME/backend:$MVN_VERSION -t $HARBOR_IMAGE_NAME/backend:latest -t $HARBOR_IMAGE_NAME/backend:$MVN_VERSION ./streampipes-backend/
      - docker push $IMAGE_NAME/backend:$MVN_VERSION
      - docker push $IMAGE_NAME/backend:latest
@@ -141,7 +136,7 @@ docker-connect-container:
    script:
      - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
-     - docker login -u zehnder -p $HARBOR_PASSWORD ipe-harbor.fzi.de
+     - docker login -u $USER_NAME -p $HARBOR_PASSWORD $HARBOR_REGISTRY_HOST
      - docker build --pull -t $IMAGE_NAME/streampipes-connect-container:latest -t $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION -t $HARBOR_IMAGE_NAME/streampipes-connect-container:latest -t $HARBOR_IMAGE_NAME/streampipes-connect-container:$MVN_VERSION ./streampipes-connect-container-master/
      - docker push $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION
      - docker push $IMAGE_NAME/streampipes-connect-container:latest
@@ -149,109 +144,4 @@ docker-connect-container:
      - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:latest
    only:
      - dev
-
-deploy:
-  image: maven:3-jdk-8
-  stage: deploy
-  script:
-    - echo "$GPG_PRIVATE_KEY" | gpg --batch --import --passphrase "$GPG_PASSPHRASE"
-    - echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
-    - mvn deploy -DskipTests
-  only:
-    - dev
-  artifacts:
-    paths:
-      - ./**/*.jar
-    expire_in:  1 hour
-    
-#deploy to test:
-#  image: maven:3-jdk-8
-#  stage: deploy
-#  before_script:
-#    - mkdir -p ~/.ssh
-#    - echo -e "$TESTSERVER_SSH" > ~/.ssh/id_rsa
-#    - chmod 600 ~/.ssh/id_rsa
-#    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-#  script:
-#    - ssh "$TESTSERVER_USER"@"$TESTSERVER_HOSTNAME" "cd ~/streampipes-cd && docker-compose pull backend && docker-compose up -d"
-#  environment:
-#    name: test
-#    url: http://$TESTSERVER_HOSTNAME
-#  only:
-#    - dev
-
-
-start release:
-  image: maven:3-jdk-8
-  stage: release
-  script:
-    - echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
-    - git remote set-url origin $GIT_REPO_ORIGIN/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
-    - eval $(ssh-agent -s)
-    - ssh-add <(echo "$SSH")
-    - mkdir ~/.ssh
-    - touch ~/.ssh/known_hosts
-    - ssh-keyscan -p 2222 -t rsa ipe-wim-gitlab.fzi.de > ~/.ssh/known_hosts
-    - git config --global user.email 'zehnder@fzi.de'
-    - git config --global user.name 'zehnder'
-    - git fetch
-    - git checkout master
-    - git checkout dev
-    - mvn -B jgitflow:release-start $MAVEN_CLI_OPTS -Drelease=true
-    - git push origin --all
-  only:
-    - dev
-  when: manual
-
-finish release:
-  image: maven:3-jdk-8
-  stage: release
-  script:
-    - export MVN_VERSION=$(cat ./target/mvn_version)
-    - echo "$GPG_PRIVATE_KEY" | gpg --batch --import --passphrase "$GPG_PASSPHRASE"
-    - echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
-    - git remote set-url origin $GIT_REPO_ORIGIN/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
-    - git remote add github https://$GITHUB_TOKEN:x-oauth-basic@github.com/streampipes/streampipes.git
-    - eval $(ssh-agent -s)
-    - ssh-add <(echo "$SSH")
-    - mkdir ~/.ssh
-    - touch ~/.ssh/known_hosts
-    - ssh-keyscan -p 2222 -t rsa ipe-wim-gitlab.fzi.de > ~/.ssh/known_hosts
-    - git config --global user.email 'zehnder@fzi.de'
-    - git config --global user.name 'zehnder'
-    - git checkout master
-    - git checkout dev
-    - git checkout $CI_BUILD_REF_NAME
-    - mvn -B jgitflow:release-finish $MAVEN_CLI_OPTS -Drelease=true
-    - git push origin --all
-    - git push origin --tags
-    - git checkout master
-    - git push github master
-    - git push github $MVN_VERSION
-    - git checkout dev
-    - git push github dev
-  when: manual
-  except:
-    - master
-
-docker hub:
-  image: docker:17.06.0-ce
-  stage: docker-hub
-  when: manual
-  script:
-    - export MVN_VERSION=$(cat ./target/mvn_version)
-    - docker login -u streampipesbuild -p $DOCKER_HUB_USER_PWD
-    - docker build --pull -t streampipes/backend:$MVN_VERSION ./streampipes-backend/
-    - docker push streampipes/backend:$MVN_VERSION
-    - docker build --pull -t streampipes/backend ./streampipes-backend/
-    - docker push streampipes/backend
-    - docker build --pull -t streampipes/streampipes-connect-container:latest -t streampipes/streampipes-connect-container:$MVN_VERSION ./streampipes-connect-container-master/
-    - docker push streampipes/streampipes-connect-container:$MVN_VERSION
-    - docker push streampipes/streampipes-connect-container:latest
-  when: manual
-  only:
-    - master
-
-
-
 
