--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ pull github:
   script:
   - git remote set-url origin $GIT_REPO_ORIGIN/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
   - git remote add github git@github.com:apache/incubator-streampipes.git
-  - eval $(ssh-agent -s
+  - eval $(ssh-agent -s)
   - ssh-add <(echo "$SSH")
   - mkdir ~/.ssh
   - touch ~/.ssh/known_hosts
