--- a/cli/services/nginx/docker-compose.yml
+++ b/cli/services/nginx/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - consul
       - connect-master
       - backend
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
