--- a/cli/services/taskmanager/docker-compose.yml
+++ b/cli/services/taskmanager/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=20
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
