--- a/cli/services/connect-master/docker-compose.yml
+++ b/cli/services/connect-master/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "2"
 services:
   connect-master:
-    image: ${SP_DOCKER_REGISTRY}streampipes/ce/streampipes-connect-container:${SP_BACKEND_VERSION}
+    image: ${SP_DOCKER_REGISTRY}streampipes-connect-container:${SP_BACKEND_VERSION}
     depends_on:
       - consul
       - couchdb
@@ -25,9 +25,10 @@ services:
     environment:
       - EXECUTION_MODE=MASTER
       - SP_CONNECT_CONTAINER_MASTER_HOST=connect-master
-      - SP_KAFKA_HOST=${SP_KAFKA_HOST}
     volumes:
       - connect:/data/
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
