--- a/cli/services/grafana/docker-compose.yml
+++ b/cli/services/grafana/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - "3000:3000"
     volumes:
       - grafana:/var/lib/grafana
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
