--- a/cli/services/jobmanager/docker-compose.yml
+++ b/cli/services/jobmanager/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     command: jobmanager
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
