--- a/cli/services/kafka-rest/docker-compose.yml
+++ b/cli/services/kafka-rest/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - ZK_CONNECTION_STRING=zookeeper:2181
       - KAFKA_REST_HOST_NAME=kafka-rest
       - KAFKA_REST_ZOOKEEPER_CONNECT=zookeeper:2181
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
