--- a/cli/services/mysql/docker-compose.yml
+++ b/cli/services/mysql/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       MYSQL_USER: user1
       MYSQL_PASSWORD: uY-F8c5)(!{H?EE}
       MYSQL_ROOT_PASSWORD: 7u*4rAy<rPh!v6@5
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
