--- a/cli/services/opcua/docker-compose.yml
+++ b/cli/services/opcua/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - ./config-generated/:/appdata
     ports:
       - 50000:50000
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
