--- a/cli/services/processors-text-mining-jvm/docker-compose.yml
+++ b/cli/services/processors-text-mining-jvm/docker-compose.yml
@@ -16,16 +16,15 @@
 version: "2"
 services:
   processors-text-mining-jvm:
-    image: ${SP_PE_DOCKER_REGISTRY}processors-text-mining-jvm:${SP_PE_VERSION}
+    image: ${SP_DOCKER_REGISTRY}processors-text-mining-jvm:${SP_PE_VERSION}
     depends_on:
       - "consul"
     volumes:
       - ./config/models:/data/models
     ports:
       - "8090:8090"
-    environment:
-      - SP_ICON_HOST=${SP_ICON_HOST}
-      - SP_KAFKA_HOST=${SP_KAFKA_HOST}
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
