--- a/cli/services/sinks-notifications-jvm/docker-compose.yml
+++ b/cli/services/sinks-notifications-jvm/docker-compose.yml
@@ -16,14 +16,13 @@
 version: "2"
 services:
   sinks-notifications-jvm:
-    image: ${SP_PE_DOCKER_REGISTRY}sinks-notifications-jvm:${SP_PE_VERSION}
+    image: ${SP_DOCKER_REGISTRY}sinks-notifications-jvm:${SP_PE_VERSION}
     depends_on:
       - "consul"
 #    ports:
 #      - "8098:8090"
-    environment:
-      - SP_ICON_HOST=${SP_ICON_HOST}
-      - SP_KAFKA_HOST=${SP_KAFKA_HOST}
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
