--- a/cli/services/sources-watertank-simulator/docker-compose.yml
+++ b/cli/services/sources-watertank-simulator/docker-compose.yml
@@ -16,14 +16,13 @@
 version: "2"
 services:
   sources-watertank-simulator:
-    image: ${SP_PE_DOCKER_REGISTRY}sources-watertank-simulator:${SP_PE_VERSION}
+    image: ${SP_DOCKER_REGISTRY}sources-watertank-simulator:${SP_PE_VERSION}
     depends_on:
       - "consul"
 #    ports:
 #      - "8098:8090"
-    environment:
-      - SP_ICON_HOST=${SP_ICON_HOST}
-      - SP_KAFKA_HOST=kafka
+    extra_hosts:
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
     networks:
       spnet:
 
