--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.apache</groupId>
+        <artifactId>apache</artifactId>
+        <version>21</version>
+    </parent>
+
     <groupId>org.apache.streampipes</groupId>
     <artifactId>streampipes-parent</artifactId>
     <version>0.65.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.locations.enabled>false</dependency.locations.enabled>
@@ -100,9 +107,9 @@
         <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
     </properties>
 
-    <name>StreamPipes Parent Pom</name>
-    <description>StreamPipes</description>
-    <url>https://streampipes.org</url>
+    <name>Apache StreamPipes</name>
+    <description>A self-service (Industrial) IoT toolbox to enable non-technical users to connect, analyze and explore IoT data streams.</description>
+    <url>https://streampipes.apache.org</url>
 
     <dependencyManagement>
         <dependencies>
@@ -1105,57 +1112,46 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@ipe-wim-gitlab.fzi.de:2222/streampipes/ce.git
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/incubator-streampipes.git
         </developerConnection>
-        <connection>scm:git:ssh://git@ipe-wim-gitlab.fzi.de:2222/streampipes/ce.git</connection>
-        <url>https://github.com/streampipes/streampipes</url>
+        <connection>scm:git:https://gitbox.apache.org/repos/asf/incubator-streampipes.git</connection>
+        <url>https://github.com/apache/incubator-streampipes</url>
     </scm>
 
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    <issueManagement>
+        <system>Jira</system>
+        <url>https://issues.apache.org/jira/browse/STREAMPIPES</url>
+    </issueManagement>
 
-    <developers>
-        <developer>
-            <name>Dominik Riemer</name>
-            <email>riemer@fzi.de</email>
-        </developer>
-        <developer>
-            <name>Philipp Zehnder</name>
-            <email>zehnder@fzi.de</email>
-        </developer>
-    </developers>
+    <mailingLists>
+        <mailingList>
+            <name>Apache StreamPipes Developer List</name>
+            <subscribe>mailto:dev-subscribe@streampipes.apache.org</subscribe>
+            <unsubscribe>mailto:dev-unsubscribe@streampipes.apache.org</unsubscribe>
+            <post>mailto:dev@streampipes.apache.org</post>
+            <archive>http://mail-archives.apache.org/mod_mbox/streampipes-dev/</archive>
+        </mailingList>
+        <mailingList>
+            <name>Apache StreamPipes User List</name>
+            <subscribe>mailto:users-subscribe@streampipes.apache.org</subscribe>
+            <unsubscribe>mailto:users-unsubscribe@streampipes.apache.org</unsubscribe>
+            <post>mailto:users@streampipes.apache.org</post>
+            <archive>http://mail-archives.apache.org/mod_mbox/streampipes-users/</archive>
+        </mailingList>
+        <mailingList>
+            <name>Apache StreamPipes Commits List</name>
+            <subscribe>mailto:commits-subscribe@streampipes.apache.org</subscribe>
+            <unsubscribe>mailto:commits-unsubscribe@streampipes.apache.org</unsubscribe>
+            <post>mailto:commits@streampipes.apache.org</post>
+            <archive>http://mail-archives.apache.org/mod_mbox/streampipes-commits/</archive>
+        </mailingList>
+        <mailingList>
+            <name>Apache StreamPipes Jira Notifications List</name>
+            <subscribe>mailto:issues-subscribe@streampipes.apache.org</subscribe>
+            <unsubscribe>mailto:issues-unsubscribe@streampipes.apache.org</unsubscribe>
+            <post>mailto:issues@streampipes.apache.org</post>
+            <archive>http://mail-archives.apache.org/mod_mbox/streampipes-issues/</archive>
+        </mailingList>
+    </mailingLists>
 
-    <repositories>
-        <repository>
-            <id>laus</id>
-            <name>nexus repository</name>
-            <url>https://laus.fzi.de/nexus/content/repositories/public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>sonatype</id>
-            <name>Releases</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>ipe-nexus</id>
-            <name>Internal Releases</name>
-            <url>https://ipe-nexus.fzi.de/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
