--- a/pom.xml
+++ b/pom.xml
@@ -571,11 +571,22 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshot Repository</name>
+            <url>https://repository.apache.org/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
     <scm>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/incubator-streampipes-extensions.git
         </developerConnection>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/incubator-streampipes-extensions.git</connection>
         <url>https://github.com/apache/incubator-streampipes-extensions</url>
     </scm>
-    
+
 </project>
